[gd_scene load_steps=5 format=3 uid="uid://cvx38gq024i88"]

[ext_resource type="Script" path="res://scenes/Communicator.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://vtfd0hg8cu4r" path="res://assets/images/chromatic.svg" id="2_yrnva"]
[ext_resource type="Theme" uid="uid://ctq6b326o0feu" path="res://themes/RedHeadingTheme.tres" id="3_3sgoi"]
[ext_resource type="Theme" uid="uid://cd8yqy8uogmvo" path="res://themes/RedTheme.tres" id="4_hodho"]

[node name="Communicator" type="Node2D"]
script = ExtResource("1")

[node name="HTTPRequestGameRetrieve" type="HTTPRequest" parent="."]

[node name="HTTPRequestGameCurrentStatus" type="HTTPRequest" parent="."]

[node name="HTTPRequestGoToFacility" type="HTTPRequest" parent="."]

[node name="HTTPRequestGoToLocation" type="HTTPRequest" parent="."]

[node name="HTTPRequestFeaturesRetrieve" type="HTTPRequest" parent="."]

[node name="HTTPRequestPersonsRetrieve" type="HTTPRequest" parent="."]

[node name="HTTPRequestCatchPerson" type="HTTPRequest" parent="."]

[node name="HTTPRequestGameCreate" type="HTTPRequest" parent="."]

[node name="Lightbox" type="ColorRect" parent="."]
visible = false
custom_minimum_size = Vector2(1000, 600)
offset_right = 40.0
offset_bottom = 40.0
color = Color(0, 0, 0, 0.831373)

[node name="Loader" type="Sprite2D" parent="."]
position = Vector2(68, 542)
scale = Vector2(0.05, 0.05)
texture = ExtResource("2_yrnva")

[node name="ErrorPanel" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(500, 300)
offset_left = 350.0
offset_top = 150.0
offset_right = 650.0
offset_bottom = 450.0
theme = ExtResource("4_hodho")

[node name="VBoxContainer" type="VBoxContainer" parent="ErrorPanel"]
custom_minimum_size = Vector2(460, 100)
layout_mode = 0
offset_left = 20.0
offset_top = 70.0
offset_right = 280.0
offset_bottom = 184.0

[node name="ErrorInfo" type="Label" parent="ErrorPanel/VBoxContainer"]
custom_minimum_size = Vector2(260, 150)
layout_mode = 2
theme_override_constants/line_spacing = 5
text = "Προέκυψε σφάλμα επικοινωνίας με το server.
Παρακαλώ, ελέγξτε τη σύνδεσή σας στο διαδίκτυο."
autowrap_mode = 2

[node name="Button" type="Button" parent="ErrorPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Επιστροφή στην αρχική σελίδα"

[node name="ErrorTitle" type="Label" parent="."]
visible = false
custom_minimum_size = Vector2(500, 50)
offset_left = 350.0
offset_top = 150.0
offset_right = 650.0
offset_bottom = 200.0
theme = ExtResource("3_3sgoi")
text = "Σφάλμα Δικτύου"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="request_completed" from="HTTPRequestGameRetrieve" to="." method="_on_HTTPRequestGameRetrieve_request_completed"]
[connection signal="request_completed" from="HTTPRequestGameCurrentStatus" to="." method="_on_HTTPRequestGameCurrentStatus_request_completed"]
[connection signal="request_completed" from="HTTPRequestGoToFacility" to="." method="_on_HTTPRequestGoToFacility_request_completed"]
[connection signal="request_completed" from="HTTPRequestGoToLocation" to="." method="_on_HTTPRequestGoToLocation_request_completed"]
[connection signal="request_completed" from="HTTPRequestFeaturesRetrieve" to="." method="_on_HTTPRequestFeaturesRetrieve_request_completed"]
[connection signal="request_completed" from="HTTPRequestPersonsRetrieve" to="." method="_on_HTTPRequestPersonsRetrieve_request_completed"]
[connection signal="request_completed" from="HTTPRequestCatchPerson" to="." method="_on_HTTPRequestCatchPerson_request_completed"]
[connection signal="request_completed" from="HTTPRequestGameCreate" to="." method="_on_HTTPRequestGameCreate_request_completed"]
[connection signal="pressed" from="ErrorPanel/VBoxContainer/Button" to="." method="_on_button_pressed"]
